[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Fondamento_Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/healthbar.tres" type="Theme" id=3]
[ext_resource path="res://Assets/manabar.tres" type="Theme" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button


func _onButton_pressed():
	get_node(\"Control\").unpause()
"

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer_HUD" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_right = 1.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1015.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_HUD/VBoxContainer"]
margin_right = 1005.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressBar_HP" type="ProgressBar" parent="MarginContainer_HUD/VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
value = 50.0
percent_visible = false

[node name="ProgressBar_Mana" type="ProgressBar" parent="MarginContainer_HUD/VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1005.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
value = 50.0
percent_visible = false

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer_HUD/VBoxContainer"]
margin_top = 22.0
margin_right = 1005.0
margin_bottom = 46.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_HUD/VBoxContainer/CenterContainer"]
margin_left = 403.0
margin_right = 602.0
margin_bottom = 24.0

[node name="Label_SoreLabel" type="Label" parent="MarginContainer_HUD/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"

[node name="Label_Score" type="Label" parent="MarginContainer_HUD/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 199.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "HERE BE NUMBERS"

[node name="CenterContainer_Pause" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.793701
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.341176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer_Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer_Pause/CenterContainer"]
margin_left = 467.0
margin_top = 231.0
margin_right = 557.0
margin_bottom = 368.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer_Pause/CenterContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 132.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_PauseMenu" type="Label" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Pause"

[node name="HSplitContainer" type="HBoxContainer" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 80.0
margin_bottom = 127.0
custom_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 65.0
margin_bottom = 98.0

[node name="Button_Resume" type="Button" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
script = SubResource( 1 )

[node name="Button_Suicide" type="Button" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 65.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Suicide"

[node name="Button_Quit" type="Button" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 65.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 70.0
margin_right = 80.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 93.0
text = "yccccfacccccccc
asdddddd
SDAAA"

[node name="ColorRect_Dead" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.619608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer_DeathScreen" type="CenterContainer" parent="ColorRect_Dead"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Dead" type="Label" parent="ColorRect_Dead/CenterContainer_DeathScreen"]
margin_left = 489.0
margin_top = 288.0
margin_right = 534.0
margin_bottom = 312.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.807843, 0, 0, 1 )
text = "u dead"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/Button_Resume" to="." method="_on_Button_Resume_pressed"]
[connection signal="pressed" from="CenterContainer_Pause/CenterContainer/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/Button_Suicide" to="." method="_on_Button_Suicide_pressed"]
